# amovemesh

./: .directory  .gitignore  README.md
src/: .ageometry3d.cpp.swp  .ageometry3d.hpp.swp  .amesh3d.cpp.swp  .amesh3d.hpp.swp  .directory  CMakeLists.txt  a.out  aarray2d.hpp  abbowyerwatson3d2.hpp  aboundaryinfluencedistance.cpp  aboundaryinfluencedistance.hpp  abowyerwatson.hpp  abowyerwatson3d.cpp  abowyerwatson3d.hpp  aconstants.h  adatastructures.cpp  adatastructures.hpp  adgm.hpp  adgrbf.hpp  ageometry.cpp  ageometry.hpp  ageometry3d.cpp  ageometry3d.hpp  ageometry3d_bak.cpp  ageometryh.cpp  ageometryh.hpp  alinalg.cpp  alinalg.hpp  alinalg_backup_20151113.hpp  alinearsystem.hpp  alinelast_p1.hpp  alinelast_p2_sparse.hpp  alinelast_p2_stiffened.hpp  amatrix.cpp  amatrix.hpp  amatrix2.cpp  amatrix2.hpp  amatrixt.hpp  amesh2.hpp  amesh2b.hpp  (+42 more)
src/DG/: CMakeLists.txt  a.out  abowyerwatson.hpp  abowyerwatson_binsort.hpp  adg_mm.hpp  adg_multistep_mm.hpp  arotation2d.hpp  arotation2db.hpp  coarse-cyl-some.msh  dg-cyl-fine.msh  dg-cyl-medium.msh  dg-cyl-vfine.msh  dg3d.out  dg_ms_rotate.control  dg_ms_rotate.cpp  dg_rotate.control  dg_rotate.cpp  dgms.out  dgraph-orig.msh  dgraph.msh  dgraph2.msh  dgrotate  hluo-mesh-gen.f  makefile  mdg-med.msh  medium-cyl-some.msh  medium-cyl.msh  mm-coarse.msh  mm-med.msh  mms-med.msh  mms-med80.msh  mmsdg-med.msh  mmsdg-med80.msh  performance.txt  some-coarse-points.msh  test.cpp  test.out  tri3d.out  tri3d_bump.control  tri3d_naca.control  (+7 more)
src/DG-RBF-move/: abowyerwatson.hpp  adgrbf.hpp  adgrbf_multistep.hpp  adgrbf_rot_inter.hpp  adgrbf_rot_inter_ms.hpp  arotation2db.hpp  arotation2dnew.hpp  dg.out  dg_ms_rotate.control  dg_ms_rotate.cpp  dg_rotate.control  dg_rotate.cpp  dgm-qin.msh  dgms.out  dgmsr.out  dgrbf-coarse.msh  dgrbf-ms-coarse.msh  dgrbf-ms-dg-coarse.msh  dgrbf1-qin.msh  dgrbf2-dg-qin.msh  dgrbf2-qin.msh  dgrbf_r-dg-qin.msh  dgrbf_r-qin.msh  dgrbfr.out  dgri.out  dgrims.out  dgrotinter.control  dgrotinter.cpp  dgrotinterms.control  dgrotinterms.cpp  makefile  mdgm.out  mdgrbf1.out  mdgrbf2.out  mdgrbfr.out  mmrbf-coarse.msh  mmrbf-dg-coarse.msh  mmrbf-ms-coarse.msh  mmrbf-ms-dg-coarse.msh  move_dgm.control  (+12 more)
src/DG-RBF-wing-animate/: adg_multistep_mm.hpp  adg_multistep_mm_rotate.hpp
src/DG-hybrid/: acmg2dh_ledg.hpp  acmg2dh_linedg.hpp  acmg2dh_rbfdg.hpp  acurvedmeshgen2dh-hybrid.hpp  adghybrid.hpp  alinedghybrid.hpp  arbfdghybrid.hpp  babytest.control  babytest.control~  c2dh_3airfoil.control  c2dh_ellipse.control  c2dh_hairfoil3rd.control  c2dh_line_3airfoil.control  dgh2d.out  dghybrid.cpp  linedgh2d.out  linedghybrid.cpp  makefile  rbfdgh2d.out  rbfdghybrid.cpp  rbfdghybrid_test.cpp  simplesquare.control  testdg.msh  testdg_moved.msh
src/DG-wing/: a.out  abowyerwatson.hpp  adg_multistep_mm.hpp  adg_multistep_mm_rotate.hpp  arotation2db2.hpp  dg_ms_rotate.control  dg_ms_wing.cpp  dg_rotate.control  dg_rotate.cpp  dgms.out  dgmsr.out  makefile  mdg-coarse.msh  mdg-ms-coarse.msh  mdg2-ms-coarse.msh  mm-coarse.msh  mm-coarse[-15].msh  mm-coarse[-40].msh  mm-coarse[-43].msh  mm-coarse[20].msh  mm-coarse[5].msh  mm-ms-coarse.msh  mm-ms-coarse[-45].msh  mm-ms-coarse[-60].msh  mm2-ms-coarse.msh  visualize.cpp  wing.msh
src/DG-wing-animate/: dg.out  dg_ms_rotate.control  dg_ms_rotate.cpp  dg_ms_rotate_old.cpp  dgms.out  makefile  mdg-ms-coarse.msh  mm-ms-coarse.msh
src/Moving-mesh/: a.out  amovemesh2d.hpp  arotation2db.hpp  driver-farhat-wing.cpp  driver-farhat.cpp  driver-lineal.cpp  far.out  far2.out  farhat-wing.control  farhat.control  farw.out  farwp.out  lin.out  lineal.control  makefile  movedmesh-farhat-gaussseidel120.vtu  movedmesh-farhat-gaussseidel125.vtu  movedmesh-farhat-gaussseidel75.vtu  movedmesh-farhat-gaussseidel90.vtu  movedmesh-gaussseidel45.vtu  movedmesh-gaussseidel60.vtu  movedmesh-lineal-gaussseidel110.vtu  movedmesh-lineal-gaussseidel120.vtu  movedmesh-lineal-gaussseidel125.vtu  movedmesh-lineal-gaussseidel150.vtu  movedmesh-pointjacobi45-old.vtu  movedmesh-pointjacobi45.vtu  movedmesh45.vtu  movedwing-farhat--20.msh  movedwing-farhat--60.msh  movedwing-farhat-30.msh  mymesh.vtu  mymovedmesh-test.vtu
src/Moving-mesh-curved/: a.out  amesh_c.hpp  amesh_curved.hpp  curvedmesh-aspect.msh  curvedmesh-old.msh  curvedmesh.msh  curvedmesh2.msh  makefile  minDisto.txt  movedmesh2.vtu  movemesh.vtu  movemesh2.vtu  origmesh.vtu  origmesh2.vtu  refmesh.vtu  refmesh2.vtu  test.cpp  testmesh-aspect.domn  testmesh.domn  testmesh2.domn
src/RBF/: arbf.hpp  arbf0.hpp  makefile  movedrbf-b-3.msh  movedrbf-b-4.msh  movedrbf-b.msh  movedrbf-poly.msh  movedrbf.msh  movedrbf2.msh  movedrbf3.msh  rbf0_square.cpp  rbf0_wing.cpp  rbf_square.control  rbf_square.cpp  rbf_wing.control  sq.out  sqp.out  w.out  wing-rbf--60-sr15-steps3.msh  wing-rbf--60-sr15-steps6.msh  wing-rbf--60-sr20-steps6.msh  wing-rbf--80-sr20-steps6.msh  wing-rbf-40-sr20-steps4.msh  wing-rbf-60-sr20-steps4.msh
src/binsort/: BinSort.cpp  CMakeLists.txt  a.out  adistbinsort.cpp  adistbinsort.hpp  sortingData.txt
src/bouncurve/: CMakeLists.txt  abouncurve3d.hpp  acurvedmeshgen-dg.hpp  acurvedmeshgen-dgrbf.hpp  acurvedmeshgen-rbf.hpp  adgrbf.hpp  bouncurve3d.cpp  compare.cpp  diffmesh.cpp  genbasemesh.cpp  gencurved-dgm.cpp  gencurved-dgrbf.cpp
src/curved-mesh-gen-cad/: CMakeLists.txt  acurvedmeshgen.hpp  acurvedmeshgen2d.hpp  cmg_3dsphere.control  curvedmeshgen3d.cpp
src/curved-mesh-gen-simple/: CMakeLists.txt  abowyerwatson.hpp  acurvedmeshgen-dg-em.hpp  acurvedmeshgen-dg.hpp  acurvedmeshgen-rbf-3d.hpp  adg_mm.hpp  adgm.hpp  arbf.hpp  c.out  cdgm.out  cdgrbf.out  comp.out  compa.out  crbf.out  crbf3d.out  dg.msh  dg2.msh  dm.out  gencurved-dgm.control  gencurved-dgm.cpp  gencurved-dgrbf.control  gencurved-rbf-3d.control  gencurved-rbf-3d.cpp  gencurved-rbf.cpp  getq.out  getquadmesh.control  getquadmesh.cpp  makefile  minDisto.txt  try_curved_rbf.msh  try_quadratic.msh  tryhex_curved.msh  tryhex_quadratic.msh  tryquad.msh  tryquad_curved.msh  tryquad_quadratic.msh
src/curved-mesh-gen-splines/: .acurvedmeshgen3d.hpp.swp  CMakeLists.txt  amc  arbf.hpp  (+49 more)
(+1141 files in other folders)
